# rag-microstack-k8s

./: README.md  pyproject.toml
infra/src/app-manifests/deepstore/: minio-operator.yaml  minio-tenant.yaml
infra/src/app-manifests/learning/: mlflow.yaml
infra/src/app-manifests/metastore/: hive-metastore.yaml
infra/src/app-manifests/monitoring/: kube-prometheus.yaml
infra/src/app-manifests/vectorstore/: qdrant-app.yaml
infra/src/helm-charts/deepstore/tenant/: values.yaml
infra/src/helm-charts/vectorstore/charts/qdrant/: values.yaml
infra/terraform/gitops/argocd/: config.yaml  git-repo-conf.yaml  git-repo-conf.yaml.tpl  main.tf  provider.tf  variables.tf
infra/terraform/platform/: modules.tf  provider.tf  variables.tf
infra/terraform/platform/modules/eks/: main.tf
infra/terraform/platform/modules/minikube/: main.tf  output.tf  provider.tf  variables.tf
src/chatbot_app/: Dockerfile  chatbot.py  entrypoint.sh  requirements.txt
src/qdrant_api/: Dockerfile  embeddata.py  entrypoint.sh  main.py  requirements.txt
src/qdrant_api/api/: dependencies.py  routes.py
src/qdrant_api/application/: custom_retriever.py  rag_pipeline.py
src/qdrant_api/config/: config.py
src/qdrant_api/domain/: models.py
src/qdrant_api/infrastructure/: embedding_manager.py
