[project]
name = "rag-microstack-k8s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "minio>=7.2.15",
    "notebook>=7.4.0",
    "ollama>=0.4.8",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pypdf2>=3.0.1",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
